--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Baby Shower - Te invitamos! ✨</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
@@ -23,6 +23,8 @@
             overflow-x: hidden;
             position: relative;
             min-height: 100vh;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .floating-particles {
@@ -156,11 +158,12 @@
 
         .hero-content h1 {
             font-family: 'Playfair Display', serif;
-            font-size: clamp(2.5em, 5.5vw, 4em);
+            font-size: clamp(2em, 8vw, 4em);
             color: #d4a5a5;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             text-shadow: 0 0 40px rgba(212, 165, 165, 1), 0 0 60px rgba(244, 143, 177, 0.8), 0 5px 15px rgba(0,0,0,0.3);
             animation: titleGlow 3s ease-in-out infinite;
+            line-height: 1.2;
         }
 
         @keyframes titleGlow {
@@ -169,20 +172,21 @@
         }
 
         .hero-content .subtitle {
-            font-size: clamp(1.4em, 3.2vw, 2em);
+            font-size: clamp(1.1em, 4vw, 2em);
             color: #fff;
-            line-height: 1.8;
-            margin-bottom: 25px;
+            line-height: 1.6;
+            margin-bottom: 20px;
             font-style: italic;
             text-shadow: 0 2px 10px rgba(0,0,0,0.3), 0 0 30px rgba(255, 255, 255, 0.5);
             font-weight: 500;
+            padding: 0 10px;
         }
 
         .hero-content .scroll-hint {
-            font-size: clamp(1.3em, 2.8vw, 1.7em);
+            font-size: clamp(1.1em, 4vw, 1.7em);
             color: #fff;
             animation: bounce 2s infinite;
-            margin-top: 30px;
+            margin-top: 20px;
             text-shadow: 0 2px 10px rgba(0,0,0,0.3), 0 0 20px rgba(248, 187, 208, 0.8);
             font-weight: 600;
         }
@@ -222,10 +226,11 @@
 
         .countdown h2 {
             font-family: 'Playfair Display', serif;
-            font-size: clamp(0.9em, 2.1vw, 1.4em);
+            font-size: clamp(0.85em, 2.5vw, 1.4em);
             color: #d4a5a5;
             margin-bottom: 14px;
             text-shadow: 0 0 15px rgba(212, 165, 165, 0.3);
+            padding: 0 10px;
         }
 
         .countdown-timer {
@@ -271,7 +276,7 @@
         }
 
         .time-box .number {
-            font-size: clamp(1.4em, 2.8vw, 2.1em);
+            font-size: clamp(1.2em, 3.5vw, 2.1em);
             font-weight: bold;
             color: #f48fb1;
             display: block;
@@ -281,10 +286,10 @@
         }
 
         .time-box .label {
-            font-size: clamp(0.55em, 1.05vw, 0.7em);
+            font-size: clamp(0.5em, 1.2vw, 0.7em);
             color: #6d4c41;
             text-transform: uppercase;
-            letter-spacing: 0.7px;
+            letter-spacing: 0.5px;
             position: relative;
             z-index: 1;
         }
@@ -464,8 +469,8 @@
         }
 
         .balloon svg {
-            width: 80px;
-            height: 100px;
+            width: clamp(60px, 15vw, 80px);
+            height: clamp(75px, 18vw, 100px);
         }
 
         .balloon-message {
@@ -474,13 +479,13 @@
             left: 50%;
             transform: translate(-50%, -50%);
             background: white;
-            padding: 40px;
+            padding: clamp(25px, 5vw, 40px);
             border-radius: 30px;
             box-shadow: 0 20px 80px rgba(0,0,0,0.4);
             z-index: 10001;
             text-align: center;
             max-width: 90%;
-            width: 450px;
+            width: clamp(300px, 90vw, 450px);
             animation: popIn 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
             border: 3px solid rgba(212, 165, 165, 0.3);
         }
@@ -590,14 +595,14 @@
 
         .final-reveal-content {
             text-align: center;
-            padding: 30px 25px;
+            padding: clamp(20px, 4vw, 30px);
             background: white;
             border-radius: 40px;
             box-shadow: 0 30px 100px rgba(0,0,0,0.4);
             max-width: 90%;
             max-height: 90vh;
-            overflow: hidden;
-            width: 500px;
+            overflow-y: auto;
+            width: clamp(300px, 90vw, 500px);
             animation: smoothReveal 1.5s cubic-bezier(0.34, 1.56, 0.64, 1);
             border: 4px solid rgba(212, 165, 165, 0.5);
         }
@@ -860,21 +865,22 @@
 
         .music-control {
             position: fixed;
-            bottom: 30px;
-            right: 30px;
+            bottom: 80px;
+            right: 20px;
             background: linear-gradient(135deg, #f48fb1 0%, #f8bbd0 100%);
-            width: 65px;
-            height: 65px;
+            width: clamp(50px, 12vw, 65px);
+            height: clamp(50px, 12vw, 65px);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            font-size: 1.6em;
+            font-size: clamp(1.3em, 3vw, 1.6em);
             box-shadow: 0 8px 30px rgba(244, 143, 177, 0.4);
             z-index: 1000;
             transition: all 0.3s ease;
             border: 3px solid rgba(255, 255, 255, 0.5);
+            -webkit-tap-highlight-color: transparent;
         }
 
         .music-control:hover {
