Update index.html v7

--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
 
     <section class="hero-section">
         <div class="hero-content">
-            <h1>✨ Te invitamos al Baby Shower! ✨</h1>
+            <h1>✨Te invitamos al Baby Shower!✨</h1>
             <p class="subtitle">
                 Una historia que apenas comienza...<br>
                 Una pequeña luz está por llegar,<br>
@@ -1035,7 +1035,7 @@
     </section>
 
     <div class="countdown" id="countdownBanner">
-        <h2>⏰ Faltan pocos días para celebrar esta nueva vida ✨</h2>
+        <h2>⏰Faltan pocos días para celebrar esta nueva vida✨</h2>
         <div class="countdown-timer">
             <div class="time-box">
                 <span class="number" id="days">00</span>
@@ -1070,7 +1070,7 @@
                 </div>
                 <div class="detail-item">
                     <span>📍</span>
-                    <div><strong>Lugar:</strong> Calle 12c # 1E-7, Soacha, Cundinamarca</div>
+                    <div><strong>Lugar:</strong> Calle 12 # 00-10 Este, Soacha, Cundinamarca</div>
                 </div>
                 <div class="detail-item">
                     <span>👩‍🍼</span>
@@ -1088,7 +1088,7 @@
                         📍 Llévame al evento
                     </a>
                     <a href="https://wa.me/573153442396?text=¡Confirmo%20mi%20asistencia%20al%20baby%20shower!%20🎀" target="_blank" class="btn btn-whatsapp">
-                        💬 Confirmar Asistencia
+                        👋 Confirmar Asistencia
                     </a>
                 </div>
             </div>
@@ -1099,7 +1099,7 @@
         <div class="content-wrapper">
             <div class="balloon-game">
                 <h2>🎈 Rompe los Globos</h2>
-                <p>¡Haz clic en los globos para descubrir el nombre de la bebé!</p>
+                <p>¡Haz clic en los globos para descubrir algo hermoso!</p>
                 <div class="balloon-container" id="balloonContainer"></div>
                 <div id="letterProgress"></div>
             </div>
@@ -1115,7 +1115,7 @@
                     <button onclick="submitWish()">✨ Enviar Deseo</button>
                 </div>
                 <h3 style="font-family: 'Playfair Display', serif; color: #d4a5a5; font-size: clamp(1.5em, 3vw, 2em); margin-bottom: 30px;">
-                    💝 Deseos de Amor
+                    💝 Muro de deseos 
                 </h3>
                 <div class="wishes-board" id="wishesBoard"></div>
             </div>
@@ -1136,7 +1136,7 @@
     </section>
 
     <footer class="footer">
-        <p>Con amor, Vanessa, Cristian y toda la familia 💕</p>
+        <p>Te esperamos. Con gran afecto, Vanessa, Cristian y toda la familia 💕﻿</p>
     </footer>
 
     <script>
@@ -1428,8 +1428,8 @@
             'Algo hermoso está por revelarse…',
             '¡Una nueva luz llega al mundo! ✨',
             '¡El amor está en el aire! 💝',
-            '¡Prepárate para celebrar! 🎊',
-            '¡Cada momento será mágico! 🌟',
+            '¡La tía Catalina esta emocionada! 🎊',
+            '¡Los papás estan alegres! 🌟',
             '¡Sigue buscando las letras! 🔍',
             '¡Estás muy cerca! 💫'
         ];
