Update index.html v16

--- a/index.html
+++ b/index.html
@@ -1082,12 +1082,13 @@
 
     <section>
         <div class="content-wrapper">
+            <div class="finale" style="max-width: 600px; padding-bottom: 0;">
                 <h2>🎁 Regalo Sorpresa 🎁</h2>
                 <p>
                     Si deseas hacer un regalo, ¡pensar en el bebé es el mejor detalle!<br>
                     Hemos preparado una lista de sugerencias para ayudarte con la elección.
                 </p>
-        </div>
+            </div>
     </section>
     <section>
         <div class="content-wrapper">
@@ -1098,7 +1099,9 @@
                 <div id="letterProgress"></div>
             </div>
         </div>
-        
+    </section>
+    <br>
+      <section>
         <div class="content-wrapper">
             <div class="wishes-section">
                 <h2>💌 Deja tu Deseo</h2>
@@ -1112,7 +1115,8 @@
                 <div class="wishes-board" id="wishesBoard"></div>
             </div>
         </div>
-
+        <br>
+        <br>
         <div class="content-wrapper">
             <div class="finale">
                 <h2>💕 Gracias 💕</h2>
