Update index.html V21

--- a/index.html
+++ b/index.html
@@ -1004,9 +1004,9 @@
 
     <div class="final-reveal" id="finalReveal">
         <div class="final-reveal-content">
-            <h2>🎊 ¡Descubriste el nombre! 🎊</h2>
+            <h2>🎉 Descubriste el nombre 🎉</h2>
             <div class="name">RENATA</div>
-            <p>💫 ¡Bienvenida a nuestras vidas, Renata! 💫</p>
+            <p>💖 ¡Bienvenida a nuestras vidas, Renata! 💖</p>
             <p>Una nueva estrella que iluminará cada día con su luz, amor y alegría.</p>
             <p style="margin-top: 15px;">Estamos emocionados de compartir este momento tan especial contigo.</p>
             <button onclick="closeFinalReveal()">✨ Continuar Celebrando ✨</button>
@@ -1088,8 +1088,7 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section>
+        
         <div class="content-wrapper">
             <div class="balloon-game">
                 <h2>🎈 Rompe los Globos</h2>
@@ -1115,8 +1114,7 @@
         </div>
             <div class="content-wrapper">
             <div class="finale">
-                <h2><br>
-💕 Gracias 💕</h2>
+                <h2><br>💕 Gracias 💕</h2>
                 <p>
                     Gracias por acompañarnos en esta nueva aventura.<br>
                     Cada sonrisa, cada abrazo, cada buen deseo<br>
@@ -1132,6 +1130,10 @@
                 <br>
                 </p>
             </div>
+            <section>
+                <div>
+                </div>
+            </section>
       
     <footer class="footer">
         <p>Te esperamos. Con gran afecto, Vanessa, Cristian y toda la familia. 💕﻿</p>
@@ -1699,11 +1701,11 @@
             ytPlayer = new YT.Player('youtubeAudioContainer', {
                 height: '0',
                 width: '0',
-                videoId: '9GaBMZRHM3U', 
+                videoId: 'EZ06mv1-0N8', 
                 playerVars: {
                     autoplay: 0,
                     loop: 1,
-                    playlist: '9GaBMZRHM3U', 
+                    playlist: 'PL7UG8VftgmkIj7Ae6JPLeoxiS9hcdQUaQ', 
                     controls: 0,
                     disablekb: 1,
                     modestbranding: 1,
