Update index.html v26

--- a/index.html
+++ b/index.html
@@ -1130,10 +1130,8 @@
                 <br>
                 </p>
             </div>
-                      <p>
+                <p>
                     <br>
-                          <br>
-
                 </p>
     <footer class="footer">
         <p>Te esperamos. Con gran afecto, Vanessa, Cristian y toda la familia. 💕﻿</p>
@@ -1701,7 +1699,7 @@
             ytPlayer = new YT.Player('youtubeAudioContainer', {
                 height: '0',
                 width: '0',
-                videoId: 'EZ06mv1-0N8', 
+                videoId: '0lGf7aMWvSs', 
                 playerVars: {
                     autoplay: 0,
                     loop: 1,
